add payment page and some minor fixes

--- a/src/components/Checkout/Address/AddAddress/add-address.css
+++ b/src/components/Checkout/Address/AddAddress/add-address.css
@@ -239,7 +239,7 @@ ul.bread_crumb[_ngcontent-c24]:before {
     border-radius: 4px;
     font-size: 14px;
     height: 48px;
-    background: #0bc6a0;
+    background: #1d886d;
     font-weight: 600;
     font-family: Whitney-semi-bold;
     -webkit-box-shadow: none;
