--- a/src/components/Checkout/Address/AddressList/address-list.css
+++ b/src/components/Checkout/Address/AddressList/address-list.css
@@ -92,6 +92,7 @@
     position: relative;
     cursor: pointer;
 }
+
 /* .sticky{
     position: fixed;
     width: 25%;
@@ -104,6 +105,10 @@
     }
 } */
 
+.thickHr {
+    border-top: 1px solid #d5d6d9;
+    margin-bottom: 20px;
+}
 
 .items[_ngcontent-c22] .address-row[_ngcontent-c22] .name[_ngcontent-c22] {
     font-family: Whitney-semi-bold;
