--- a/src/components/Checkout/Payment/payment.css
+++ b/src/components/Checkout/Payment/payment.css
@@ -52,7 +52,7 @@
 }
 
 .payment-section[_ngcontent-c26] .right[_ngcontent-c26] .mini-bag-summary[_ngcontent-c26] .lbl[_ngcontent-c26] {
-    font-size: 12px;
+    /* font-size: 12px; */
     font-weight: 600;
     font-family: Whitney-semi-bold;
     color: #94969f;
@@ -61,7 +61,7 @@
 }
 
 .payment-section[_ngcontent-c26] .right[_ngcontent-c26] .mini-bag-summary[_ngcontent-c26] .items[_ngcontent-c26] {
-    font-size: 12px;
+    /* font-size: 12px; */
     font-weight: 600;
     font-family: Whitney-semi-bold;
     padding-top: 5px
@@ -114,7 +114,7 @@
 
 .payment-section[_ngcontent-c26] .right[_ngcontent-c26] .address-summary[_ngcontent-c26] .address-lbl[_ngcontent-c26] {
     font-weight: 600;
-    font-size: 12px;
+    /* font-size: 12px; */
     color: #94969f;
     padding-top: 30px;
     padding-bottom: 5px;
@@ -158,7 +158,7 @@
 
 .cod-block[_ngcontent-c29] .section-help[_ngcontent-c29] .sub-lbl[_ngcontent-c29] {
     display: block;
-    font-size: 12px;
+    /* font-size: 12px; */
     color: #696e79;
     text-transform: none
 }
