--- a/src/components/Checkout/OrderComplete/order-complete.css
+++ b/src/components/Checkout/OrderComplete/order-complete.css
@@ -18,6 +18,7 @@ body {
 }
 
 #confirmation {
+    margin-top: 100px;
     text-align: center;
     color: #fafdf0;
     background-color: #1d886d;
@@ -61,7 +62,6 @@ body {
     margin: 12px 0 0 0;
     line-height: 25px;
     font-weight: 200;
-    text-transform: uppercase;
 }
 
 #summary h2 {
