--- a/src/components/Order/UserOrders/user-orders.css
+++ b/src/components/Order/UserOrders/user-orders.css
@@ -97,7 +97,7 @@ ul.bread_crumb[_ngcontent-c17]:before {
 }
 
 .view-details-link[_ngcontent-c19] {
-    color: #526cd0
+    color: #1d886d
 }
 
 .status[_ngcontent-c15] {
