--- a/src/components/Checkout/OrderComplete/order-complete.css
+++ b/src/components/Checkout/OrderComplete/order-complete.css
@@ -18,7 +18,6 @@ body {
 }
 
 #confirmation {
-    margin-top: 100px;
     text-align: center;
     color: #fafdf0;
     background-color: #1d886d;
@@ -65,6 +64,11 @@ body {
 }
 
 #summary h2 {
+    font-weight: 600;
+    /* font-size: 12px; */
+    padding-top: 15px;
+    padding-bottom: 5px;
+    font-family: Whitney-semi-bold;
     margin: 20px 0 15px 0;
     font-size: 1.5em;
     font-weight: 400;
@@ -100,7 +104,10 @@ body {
 }
 
 .info-title {
-    font-weight: 400;
+    font-size: 14px;
+    padding-bottom: 20px;
+    height: 22px;
+    position: relative;
 }
 
 @media (max-width: 768px) {
@@ -117,4 +124,18 @@ body {
     #confirmation {
         margin: 90px auto;
     }
+}
+
+.goToFrontPage {
+    font-weight: 600;
+    /* font-size: 12px; */
+    padding-top: 15px;
+    padding-bottom: 5px;
+    font-family: Whitney-semi-bold;
+    margin: 20px 0 15px 0;
+    font-size: 1.5em;
+    font-weight: 400;
+    border-top: solid 1px;
+    text-align: center;
+    color: #f2f2f2;
 }
