new picture and use paypal prod

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -64,7 +64,7 @@
 .ui.inverted.segment[_ngcontent-c7],
 .ui.primary.inverted.segment[_ngcontent-c7] {
     background-color: #fff;
-    background: url("./../../assets/byShevlinNatureBanner001.png");
+    background: url("./../../assets/summer_collection_01.jpg");
     height: 400px;
     margin-top: -60px;
     margin-bottom: -30px;
