--- a/src/components/Static/Footer/footer.css
+++ b/src/components/Static/Footer/footer.css
@@ -47,6 +47,7 @@ a[_ngcontent-c6] {
         width: 800px;
         margin: 0 auto
     }
+
     .rightBottom[_ngcontent-c6] {
         width: 300px;
         margin: 0 auto
@@ -58,6 +59,7 @@ a[_ngcontent-c6] {
         width: 300px;
         margin: 0 auto;
     }
+
     .rightBottom[_ngcontent-c6] {
         width: 300px;
         margin: 0 auto;
@@ -224,5 +226,21 @@ a[_ngcontent-c6] {
         opacity: 1;
         -webkit-transform: translateY(0);
         transform: translateY(0);
+    }
+}
+
+.shevlin-footer-logo {
+    text-align: center;
+    font-family: Poiret One;
+    font-size: 4em;
+    margin-bottom: 30px;
+    top: 10px;
+    z-index: 2;
+    color: white;
+}
+
+@media screen and (max-width:700px) {
+    .shevlin-footer-logo {
+        font-size: 3.5em;
     }
 }
